...
    private lazy var tableView: UITableView = {
        let table = UITableView(frame: .zero, style: .insetGrouped)
        table.translatesAutoresizingMaskIntoConstraints = false
        table.delegate = self
        table.dataSource = self
        table.register(UITableViewCell.self, forCellReuseIdentifier: cellReuseId)
        table.accessibilityIdentifier = "testCases.table"
        return table
    }()

    override func viewDidLoad() {
        super.viewDidLoad()
        title = "SDK QA"
...
